# PaperWeaver

./: README.md  pyproject.toml
.github/workflows/: pip-publish.yml
paper_weaver/: __init__.py  __main__.py  argparse.py  authorweaver.py  bfs.py  dataclass.py  iface.py  iface_a2p.py  iface_init.py  iface_link.py  iface_p2a.py  iface_p2c.py  iface_p2r.py  iface_p2v.py  iface_v2p.py  weaver.py  weaver_a2p.py  weaver_a2p2v.py  weaver_impl.py  weaver_p2r2a.py  weaver_p_only.py
paper_weaver/cache/: __init__.py  argparse.py  composite.py  factory.py  identifier.py  impl.py  impl_a2p.py  impl_full.py  impl_link.py  impl_p2a.py  impl_p2c.py  impl_p2r.py  impl_p2v.py  impl_v2p.py  info_storage.py  link_storage.py  pending_storage.py
paper_weaver/cache/memory/: __init__.py  identifier.py  info_storage.py  link_storage.py  pending_storage.py
paper_weaver/cache/redis/: __init__.py  identifier.py  info_storage.py  link_storage.py  pending_storage.py
paper_weaver/datadst/: __init__.py  argparse.py
paper_weaver/datadst/neo4j/: __init__.py  author.py  datadst.py  paper.py  utils.py  venue.py
paper_weaver/datasrc/: __init__.py  argparse.py  cache.py  cache_impl.py  title_hash.py
paper_weaver/datasrc/arxiv/: __init__.py  datasrc.py  record.py  utils.py
paper_weaver/datasrc/crossref/: __init__.py  datasrc.py  person.py  record.py  utils.py
paper_weaver/initializer/: __init__.py  argparse.py
tests/: test_cache.py  test_cache_a2p.py  test_cache_edge_cases.py  test_cache_factory.py  test_cache_full.py  test_cache_integration.py  test_cache_p2a.py  test_cache_p2r.py
(+46 files in other folders)
